--- a/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
+++ b/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
@@ -1,92 +1,92 @@
 // background colors
-$pf-v5-global--BackgroundColor--100: $pf-v5-color-black-800; // primary background color
-$pf-v5-global--BackgroundColor--150: $pf-v5-color-black-850; // in-between special use case background color
-$pf-v5-global--BackgroundColor--200: $pf-v5-color-black-900; // secondary background color
-$pf-v5-global--BackgroundColor--300: $pf-v5-color-black-700; // floats on top of other elements
-$pf-v5-global--BackgroundColor--400: $pf-v5-color-black-600; // form control & item hover on --#{$pf-global}--BackgroundColor--300
-$pf-v5-global--BorderColor--100: $pf-v5-color-black-500; // primary border color
-$pf-v5-global--BorderColor--200: $pf-v5-color-black-500; // secondary border color
-$pf-v5-global--BorderColor--300: $pf-v5-color-black-400;
-$pf-v5-global--BorderColor--400: $pf-v5-color-black-200; // form control bottom border
+$pf-v6-global--BackgroundColor--100: $pf-v6-color-black-800; // primary background color
+$pf-v6-global--BackgroundColor--150: $pf-v6-color-black-850; // in-between special use case background color
+$pf-v6-global--BackgroundColor--200: $pf-v6-color-black-900; // secondary background color
+$pf-v6-global--BackgroundColor--300: $pf-v6-color-black-700; // floats on top of other elements
+$pf-v6-global--BackgroundColor--400: $pf-v6-color-black-600; // form control & item hover on background-300
+$pf-v6-global--BorderColor--100: $pf-v6-color-black-500; // primary border color
+$pf-v6-global--BorderColor--200: $pf-v6-color-black-500; // secondary border color
+$pf-v6-global--BorderColor--300: $pf-v6-color-black-400;
+$pf-v6-global--BorderColor--400: $pf-v6-color-black-200; // form control bottom border
 
 // text colors
-$pf-v5-global--Color--100: $pf-v5-color-black-50; // primary text color
-$pf-v5-global--Color--200: $pf-v5-color-black-200; // secondary text color
-$pf-v5-global--active-color--100: $pf-v5-color-blue-300;
-$pf-v5-global--primary-color--100: $pf-v5-color-blue-300; // primary blue against dark background - background, text, etc
-$pf-v5-global--primary-color--300: $pf-v5-color-blue-400; // primary blue with white text on top for contrast
-$pf-v5-global--primary-color--400: $pf-v5-color-white; // text color on top of primary--300
-$pf-v5-global--custom-color--200: $pf-v5-color-cyan-200;
-$pf-v5-global--success-color--100: $pf-v5-color-green-400;
-$pf-v5-global--warning-color--100: $pf-v5-color-gold-400;
-$pf-v5-global--warning-color--200: $pf-v5-color-gold-300;
-$pf-v5-global--danger-color--100: $pf-v5-color-red-9999;
-$pf-v5-global--danger-color--200: $pf-v5-color-red-8888;
-$pf-v5-global--link--Color: $pf-v5-color-blue-300;
-$pf-v5-global--link--Color--hover: $pf-v5-color-blue-200;
-$pf-v5-global--link--Color--visited: $pf-v5-color-purple-300;
-$pf-v5-global--disabled-color--100: $pf-v5-color-black-300; // disabled text on regular background color
-$pf-v5-global--disabled-color--200: $pf-v5-color-black-500; // disabled background color
-$pf-v5-global--disabled-color--300: $pf-v5-color-black-200; // disabled text on disabled or floating background color - except form elements
+$pf-v6-global--Color--100: $pf-v6-color-black-50; // primary text color
+$pf-v6-global--Color--200: $pf-v6-color-black-200; // secondary text color
+$pf-v6-global--active-color--100: $pf-v6-color-blue-300;
+$pf-v6-global--primary-color--100: $pf-v6-color-blue-300; // primary blue against dark background - background, text, etc
+$pf-v6-global--primary-color--300: $pf-v6-color-blue-400; // primary blue with white text on top for contrast
+$pf-v6-global--primary-color--400: $pf-v6-color-white; // text color on top of primary--300
+$pf-v6-global--custom-color--200: $pf-v6-color-cyan-200;
+$pf-v6-global--success-color--100: $pf-v6-color-green-400;
+$pf-v6-global--warning-color--100: $pf-v6-color-gold-400;
+$pf-v6-global--warning-color--200: $pf-v6-color-gold-300;
+$pf-v6-global--danger-color--100: $pf-v6-color-red-9999;
+$pf-v6-global--danger-color--200: $pf-v6-color-red-8888;
+$pf-v6-global--link--Color: $pf-v6-color-blue-300;
+$pf-v6-global--link--Color--hover: $pf-v6-color-blue-200;
+$pf-v6-global--link--Color--visited: $pf-v6-color-purple-300;
+$pf-v6-global--disabled-color--100: $pf-v6-color-black-300; // disabled text on regular background color
+$pf-v6-global--disabled-color--200: $pf-v6-color-black-500; // disabled background color
+$pf-v6-global--disabled-color--300: $pf-v6-color-black-200; // disabled text on disabled or floating background color - except form elements
 
 // icons
-$pf-v5-global--icon--Color--light: $pf-v5-color-black-200;
-$pf-v5-global--icon--Color--dark: $pf-v5-color-black-50;
+$pf-v6-global--icon--Color--light: $pf-v6-color-black-200;
+$pf-v6-global--icon--Color--dark: $pf-v6-color-black-50;
 
 // theme color resets
-$pf-v5-global--Color--dark-100: $pf-v5-global--Color--100;
-$pf-v5-global--Color--dark-200: $pf-v5-global--Color--200;
-$pf-v5-global--Color--light-100: $pf-v5-global--Color--100;
-$pf-v5-global--Color--light-200: $pf-v5-global--Color--200;
-$pf-v5-global--Color--light-300: $pf-v5-global--Color--300;
-$pf-v5-global--BorderColor--dark-100: $pf-v5-global--BorderColor--100;
-$pf-v5-global--BorderColor--light-100: $pf-v5-global--BorderColor--100;
-$pf-v5-global--primary-color--light-100: $pf-v5-global--primary-color--100;
-$pf-v5-global--primary-color--dark-100: $pf-v5-global--primary-color--100;
-$pf-v5-global--link--Color--light: $pf-v5-global--link--Color;
-$pf-v5-global--link--Color--light--hover: $pf-v5-global--link--Color--hover;
-$pf-v5-global--link--Color--dark: $pf-v5-global--link--Color;
-$pf-v5-global--link--Color--dark--hover: $pf-v5-global--link--Color--hover;
-$pf-v5-global--BackgroundColor--light-100: $pf-v5-global--BackgroundColor--100;
-$pf-v5-global--BackgroundColor--light-200: $pf-v5-global--BackgroundColor--200;
-$pf-v5-global--BackgroundColor--light-300: $pf-v5-global--BackgroundColor--300;
-$pf-v5-global--BackgroundColor--dark-100: $pf-v5-global--BackgroundColor--100;
-$pf-v5-global--BackgroundColor--dark-200: $pf-v5-global--BackgroundColor--200;
-$pf-v5-global--BackgroundColor--dark-300: $pf-v5-global--BackgroundColor--300;
-$pf-v5-global--BackgroundColor--dark-400: $pf-v5-global--BackgroundColor--400;
-$pf-v5-global--icon--Color--light--dark: $pf-v5-global--icon--Color--light;
-$pf-v5-global--icon--Color--dark--dark: $pf-v5-global--icon--Color--dark;
-$pf-v5-global--icon--Color--light--light: $pf-v5-global--icon--Color--light;
-$pf-v5-global--icon--Color--dark--light: $pf-v5-global--icon--Color--dark;
+$pf-v6-global--Color--dark-100: $pf-v6-global--Color--100;
+$pf-v6-global--Color--dark-200: $pf-v6-global--Color--200;
+$pf-v6-global--Color--light-100: $pf-v6-global--Color--100;
+$pf-v6-global--Color--light-200: $pf-v6-global--Color--200;
+$pf-v6-global--Color--light-300: $pf-v6-global--Color--300;
+$pf-v6-global--BorderColor--dark-100: $pf-v6-global--BorderColor--100;
+$pf-v6-global--BorderColor--light-100: $pf-v6-global--BorderColor--100;
+$pf-v6-global--primary-color--light-100: $pf-v6-global--primary-color--100;
+$pf-v6-global--primary-color--dark-100: $pf-v6-global--primary-color--100;
+$pf-v6-global--link--Color--light: $pf-v6-global--link--Color;
+$pf-v6-global--link--Color--light--hover: $pf-v6-global--link--Color--hover;
+$pf-v6-global--link--Color--dark: $pf-v6-global--link--Color;
+$pf-v6-global--link--Color--dark--hover: $pf-v6-global--link--Color--hover;
+$pf-v6-global--BackgroundColor--light-100: $pf-v6-global--BackgroundColor--100;
+$pf-v6-global--BackgroundColor--light-200: $pf-v6-global--BackgroundColor--200;
+$pf-v6-global--BackgroundColor--light-300: $pf-v6-global--BackgroundColor--300;
+$pf-v6-global--BackgroundColor--dark-100: $pf-v6-global--BackgroundColor--100;
+$pf-v6-global--BackgroundColor--dark-200: $pf-v6-global--BackgroundColor--200;
+$pf-v6-global--BackgroundColor--dark-300: $pf-v6-global--BackgroundColor--300;
+$pf-v6-global--BackgroundColor--dark-400: $pf-v6-global--BackgroundColor--400;
+$pf-v6-global--icon--Color--light--dark: $pf-v6-global--icon--Color--light;
+$pf-v6-global--icon--Color--dark--dark: $pf-v6-global--icon--Color--dark;
+$pf-v6-global--icon--Color--light--light: $pf-v6-global--icon--Color--light;
+$pf-v6-global--icon--Color--dark--light: $pf-v6-global--icon--Color--dark;
 
 // Shadows
 // small
-$pf-v5-global--BoxShadow--sm: 0 pf-size-prem(1px) pf-size-prem(2px) 0 rgba($pf-v5-color-black-1000, .48), 0 0 pf-size-prem(2px) 0 rgba($pf-v5-color-black-1000, .24);
-$pf-v5-global--BoxShadow--sm-top: 0 pf-size-prem(-2px) pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v5-color-black-1000, .64);
-$pf-v5-global--BoxShadow--sm-right: pf-size-prem(2px) 0 pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v5-color-black-1000, .64);
-$pf-v5-global--BoxShadow--sm-bottom: 0 pf-size-prem(2px) pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v5-color-black-1000, .64);
-$pf-v5-global--BoxShadow--sm-left: pf-size-prem(-2px) 0 pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v5-color-black-1000, .64);
+$pf-v6-global--BoxShadow--sm: 0 pf-size-prem(1px) pf-size-prem(2px) 0 rgba($pf-v6-color-black-1000, .48), 0 0 pf-size-prem(2px) 0 rgba($pf-v6-color-black-1000, .24);
+$pf-v6-global--BoxShadow--sm-top: 0 pf-size-prem(-2px) pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v6-color-black-1000, .64);
+$pf-v6-global--BoxShadow--sm-right: pf-size-prem(2px) 0 pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v6-color-black-1000, .64);
+$pf-v6-global--BoxShadow--sm-bottom: 0 pf-size-prem(2px) pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v6-color-black-1000, .64);
+$pf-v6-global--BoxShadow--sm-left: pf-size-prem(-2px) 0 pf-size-prem(4px) pf-size-prem(-1px) rgba($pf-v6-color-black-1000, .64);
 
 // medium
-$pf-v5-global--BoxShadow--md: 0 pf-size-prem(4px) pf-size-prem(8px) pf-size-prem(0) rgba($pf-v5-color-black-1000, .48), 0 0 pf-size-prem(4px) 0 rgba($pf-v5-color-black-1000, .24);
-$pf-v5-global--BoxShadow--md-top: 0 pf-size-prem(-8px) pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v5-color-black-1000, .72);
-$pf-v5-global--BoxShadow--md-right: pf-size-prem(8px) 0 pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v5-color-black-1000, .72);
-$pf-v5-global--BoxShadow--md-bottom: 0 pf-size-prem(8px) pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v5-color-black-1000, .72);
-$pf-v5-global--BoxShadow--md-left: pf-size-prem(-8px) 0 pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v5-color-black-1000, .72);
+$pf-v6-global--BoxShadow--md: 0 pf-size-prem(4px) pf-size-prem(8px) pf-size-prem(0) rgba($pf-v6-color-black-1000, .48), 0 0 pf-size-prem(4px) 0 rgba($pf-v6-color-black-1000, .24);
+$pf-v6-global--BoxShadow--md-top: 0 pf-size-prem(-8px) pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v6-color-black-1000, .72);
+$pf-v6-global--BoxShadow--md-right: pf-size-prem(8px) 0 pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v6-color-black-1000, .72);
+$pf-v6-global--BoxShadow--md-bottom: 0 pf-size-prem(8px) pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v6-color-black-1000, .72);
+$pf-v6-global--BoxShadow--md-left: pf-size-prem(-8px) 0 pf-size-prem(8px) pf-size-prem(-6px) rgba($pf-v6-color-black-1000, .72);
 
 // large
-$pf-v5-global--BoxShadow--lg: 0 pf-size-prem(8px) pf-size-prem(16px) 0 rgba($pf-v5-color-black-1000, .64), 0 0 pf-size-prem(6px) 0 rgba($pf-v5-color-black-1000, .32);
-$pf-v5-global--BoxShadow--lg-top: 0 pf-size-prem(-12px) pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .72);
-$pf-v5-global--BoxShadow--lg-right: pf-size-prem(12px) 0 pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .72);
-$pf-v5-global--BoxShadow--lg-bottom: 0 pf-size-prem(12px) pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .72);
-$pf-v5-global--BoxShadow--lg-left: pf-size-prem(-12px) 0 pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .72);
+$pf-v6-global--BoxShadow--lg: 0 pf-size-prem(8px) pf-size-prem(16px) 0 rgba($pf-v6-color-black-1000, .64), 0 0 pf-size-prem(6px) 0 rgba($pf-v6-color-black-1000, .32);
+$pf-v6-global--BoxShadow--lg-top: 0 pf-size-prem(-12px) pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .72);
+$pf-v6-global--BoxShadow--lg-right: pf-size-prem(12px) 0 pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .72);
+$pf-v6-global--BoxShadow--lg-bottom: 0 pf-size-prem(12px) pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .72);
+$pf-v6-global--BoxShadow--lg-left: pf-size-prem(-12px) 0 pf-size-prem(12px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .72);
 
 // x-large
-$pf-v5-global--BoxShadow--xl: 0 pf-size-prem(16px) pf-size-prem(32px) 0 rgba($pf-v5-color-black-1000, .64), 0 0 pf-size-prem(8px) 0 rgba($pf-v5-color-black-1000, .4);
-$pf-v5-global--BoxShadow--xl-top: 0 pf-size-prem(-16px) pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .8);
-$pf-v5-global--BoxShadow--xl-right: pf-size-prem(16px) 0 pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .8);
-$pf-v5-global--BoxShadow--xl-bottom: 0 pf-size-prem(16px) pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .8);
-$pf-v5-global--BoxShadow--xl-left: pf-size-prem(-16px) 0 pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v5-color-black-1000, .8);
+$pf-v6-global--BoxShadow--xl: 0 pf-size-prem(16px) pf-size-prem(32px) 0 rgba($pf-v6-color-black-1000, .64), 0 0 pf-size-prem(8px) 0 rgba($pf-v6-color-black-1000, .4);
+$pf-v6-global--BoxShadow--xl-top: 0 pf-size-prem(-16px) pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .8);
+$pf-v6-global--BoxShadow--xl-right: pf-size-prem(16px) 0 pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .8);
+$pf-v6-global--BoxShadow--xl-bottom: 0 pf-size-prem(16px) pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .8);
+$pf-v6-global--BoxShadow--xl-left: pf-size-prem(-16px) 0 pf-size-prem(16px) pf-size-prem(-8px) rgba($pf-v6-color-black-1000, .8);
 
 // inset
-$pf-v5-global--BoxShadow--inset: inset 0 0 pf-size-prem(10) 0 $pf-v5-color-black-1000;
+$pf-v6-global--BoxShadow--inset: inset 0 0 pf-size-prem(10) 0 $pf-v6-color-black-1000;
