--- a/src/patternfly/components/TreeView/templates/tree-view--base.hbs
+++ b/src/patternfly/components/TreeView/templates/tree-view--base.hbs
@@ -44,7 +44,7 @@
     {{/tree-view-list-item}}
     {{#> tree-view-list-item tree-view-list-item--IsExpandable="true" tree-view-list-item--IsExpanded="true"}}
       {{#> tree-view-content}}
-        {{#> tree-view-node tree-view-node--IsFocusable=true}}
+        {{#> tree-view-node}}
           {{#> tree-view-node-content}}
             {{#> tree-view-node-title}}
               spec
