--- a/src/patternfly/components/TreeView/tree-view-list-item.hbs
+++ b/src/patternfly/components/TreeView/tree-view-list-item.hbs
@@ -7,6 +7,13 @@
   {{/if}}
   {{#if tree-view-list-item--IsExpandable}}
     aria-expanded="{{#if tree-view-list-item--IsExpanded}}true{{else}}false{{/if}}"
+    {{#if tree-view-node--HasCheckbox}}
+      tabindex="-1"
+    {{else}}
+      tabindex="0"
+    {{/if}}
+  {{else}}
+    tabindex="-1"
   {{/if}}
 
   {{#if tree-view-list-item--attribute}}
