feat(misc): convert chip to label in examples

--- a/src/patternfly/components/Toolbar/templates/toolbar--chip-group.hbs
+++ b/src/patternfly/components/Toolbar/templates/toolbar--chip-group.hbs
@@ -1,7 +1,7 @@
 {{#> toolbar-group toolbar-group--IsChipGroupContainer=true}}
   {{#> toolbar-group (reset toolbar-group--IsChipGroup) toolbar-group--IsChipGroup=true}}
-    {{> toolbar--item-chip-group chip-group--label="Status" chip-group--id=(concat toolbar--id '-chip-group-status')}}
-    {{> toolbar--item-chip-group chip-group--label="Risk" chip-group--id=(concat toolbar--id '-chip-group-risk')}}
+    {{> toolbar--item-chip-group label-group--label="Status" label-group--id=(concat toolbar--id '-label-group-status')}}
+    {{> toolbar--item-chip-group label-group--label="Risk" label-group--id=(concat toolbar--id '-label-group-risk')}}
   {{/toolbar-group}}
   {{> toolbar-item-clear}}
 {{/toolbar-group}}
