--- a/src/patternfly/components/Select/select-chip-group-collapsed.hbs
+++ b/src/patternfly/components/Select/select-chip-group-collapsed.hbs
@@ -1,57 +1,57 @@
-{{#> chip-group}}
-  {{#> chip-group-main}}
-    {{#> chip-group-list chip-group-list--attribute='aria-label="Chip group list"'}}
-      {{#> chip-group-list-item}}
-        {{#> chip}}
-          {{#> chip-content}}
-            {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_one"')}}
+{{#> label-group}}
+  {{#> label-group-main}}
+    {{#> label-group-list label-group-list--attribute='aria-label="Label group list"'}}
+      {{#> label-group-list-item}}
+        {{#> label label--IsOutlined=true}}
+          {{#> label-content}}
+            {{#> label-text label-text--attribute=(concat 'id="' select--id '-label_one"')}}
               Arkansas
-            {{/chip-text}}
-          {{/chip-content}}
-          {{#> chip-actions}}
-            {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_one ' select--id '-chip_one" aria-label="Remove" id="remove_' select--id '_chip_one"')}}
+            {{/label-text}}
+          {{/label-content}}
+          {{#> label-actions}}
+            {{#> button button--modifier="pf-m-plain" button--HasNoPadding=true button--attribute=(concat 'aria-labelledby="remove_' select--id '_label_one ' select--id '-label_one" aria-label="Remove" id="remove_' select--id '_label_one"')}}
               <i class="fas fa-times" aria-hidden="true"></i>
             {{/button}}
-          {{/chip-actions}}
-        {{/chip}}
-      {{/chip-group-list-item}}
-      {{#> chip-group-list-item}}
-        {{#> chip}}
-          {{#> chip-content}}
-            {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_two"')}}
+          {{/label-actions}}
+        {{/label}}
+      {{/label-group-list-item}}
+      {{#> label-group-list-item}}
+        {{#> label label--IsOutlined=true}}
+          {{#> label-content}}
+            {{#> label-text label-text--attribute=(concat 'id="' select--id '-label_two"')}}
               Massachusetts
-            {{/chip-text}}
-          {{/chip-content}}
-          {{#> chip-actions}}
-            {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_two ' select--id '-chip_two" aria-label="Remove" id="remove_' select--id '_chip_two"')}}
+            {{/label-text}}
+          {{/label-content}}
+          {{#> label-actions}}
+            {{#> button button--modifier="pf-m-plain" button--HasNoPadding=true button--attribute=(concat 'aria-labelledby="remove_' select--id '_label_two ' select--id '-label_two" aria-label="Remove" id="remove_' select--id '_label_two"')}}
               <i class="fas fa-times" aria-hidden="true"></i>
             {{/button}}
-          {{/chip-actions}}
-        {{/chip}}
-      {{/chip-group-list-item}}
-      {{#> chip-group-list-item}}
-        {{#> chip}}
-          {{#> chip-content}}
-            {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_three"')}}
+          {{/label-actions}}
+        {{/label}}
+      {{/label-group-list-item}}
+      {{#> label-group-list-item}}
+        {{#> label label--IsOutlined=true}}
+          {{#> label-content}}
+            {{#> label-text label-text--attribute=(concat 'id="' select--id '-label_three"')}}
               New Mexico
-            {{/chip-text}}
-          {{/chip-content}}
-          {{#> chip-actions}}
-            {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_three ' select--id '-chip_three" aria-label="Remove" id="remove_' select--id '_chip_three"')}}
+            {{/label-text}}
+          {{/label-content}}
+          {{#> label-actions}}
+            {{#> button button--modifier="pf-m-plain" button--HasNoPadding=true button--attribute=(concat 'aria-labelledby="remove_' select--id '_label_three ' select--id '-label_three" aria-label="Remove" id="remove_' select--id '_label_three"')}}
               <i class="fas fa-times" aria-hidden="true"></i>
             {{/button}}
-          {{/chip-actions}}
-        {{/chip}}
-      {{/chip-group-list-item}}
-      {{#> chip-group-list-item}}
-        {{#> chip chip--type="button" chip--modifier="pf-m-overflow"}}
-          {{#> chip-content}}
-            {{#> chip-text}}
+          {{/label-actions}}
+        {{/label}}
+      {{/label-group-list-item}}
+      {{#> label-group-list-item}}
+        {{#> label label--type="button" label--modifier="pf-m-overflow"}}
+          {{#> label-content}}
+            {{#> label-text}}
               2 more
-            {{/chip-text}}
-          {{/chip-content}}
-        {{/chip}}
-      {{/chip-group-list-item}}
-    {{/chip-group-list}}
-  {{/chip-group-main}}
-{{/chip-group}}
+            {{/label-text}}
+          {{/label-content}}
+        {{/label}}
+      {{/label-group-list-item}}
+    {{/label-group-list}}
+  {{/label-group-main}}
+{{/label-group}}
