--- a/src/patternfly/components/Toolbar/templates/toolbar--item-chip-group.hbs
+++ b/src/patternfly/components/Toolbar/templates/toolbar--item-chip-group.hbs
@@ -1,53 +1,53 @@
 {{#> toolbar-item}}
-  {{#> chip-group}}
-    {{#> chip-group-main}}
-      {{#> chip-group-label chip-group-label--attribute=(concat 'id="' chip-group--id '-chip-group-label"')}}
-        {{chip-group--label}}
-      {{/chip-group-label}}
-      {{#> chip-group-list chip-group-list--attribute=(concat 'aria-labelledby="' chip-group--id '-chip-group-label"')}}
-        {{#> chip-group-list-item}}
-          {{#> chip}}
-            {{#> chip-content}}
-              {{#> chip-text chip-text--attribute=(concat 'id="' chip-group--id 'chip-one"')}}
-                Chip one
-              {{/chip-text}}
-            {{/chip-content}}
-            {{#> chip-actions}}
-              {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="' chip-group--id 'remove-chip-one ' chip-group--id 'chip-one" aria-label="Remove" id="' chip-group--id 'remove-chip-one"')}}
+  {{#> label-group label-group--modifier="pf-m-category"}}
+    {{#> label-group-main}}
+      {{#> label-group-label label-group-label--attribute=(concat 'id="' label-group--id '-label-group-label"')}}
+        {{label-group--label}}
+      {{/label-group-label}}
+      {{#> label-group-list label-group-list--attribute=(concat 'aria-labelledby="' label-group--id '-label-group-label"')}}
+        {{#> label-group-list-item}}
+          {{#> label label--IsOutlined=true}}
+            {{#> label-content}}
+              {{#> label-text label-text--attribute=(concat 'id="' label-group--id 'label-one"')}}
+                Label one
+              {{/label-text}}
+            {{/label-content}}
+            {{#> label-actions}}
+              {{#> button button--modifier="pf-m-plain" button--HasNoPadding=true button--attribute=(concat 'aria-labelledby="' label-group--id 'remove-label-one ' label-group--id 'label-one" aria-label="Remove" id="' label-group--id 'remove-label-one"')}}
                 <i class="fas fa-times" aria-hidden="true"></i>
               {{/button}}
-          {{/chip-actions}}
-          {{/chip}}
-        {{/chip-group-list-item}}
-        {{#> chip-group-list-item}}
-          {{#> chip}}
-            {{#> chip-content}}
-              {{#> chip-text chip-text--attribute=(concat 'id="' chip-group--id 'chip-two"')}}
-                Chip two
-              {{/chip-text}}
-            {{/chip-content}}
-            {{#> chip-actions}}
-              {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="' chip-group--id 'remove-chip-two ' chip-group--id 'chip-two" aria-label="Remove" id="' chip-group--id 'remove-chip-two"')}}
+          {{/label-actions}}
+          {{/label}}
+        {{/label-group-list-item}}
+        {{#> label-group-list-item}}
+          {{#> label label--IsOutlined=true}}
+            {{#> label-content}}
+              {{#> label-text label-text--attribute=(concat 'id="' label-group--id 'label-two"')}}
+                Label two
+              {{/label-text}}
+            {{/label-content}}
+            {{#> label-actions}}
+              {{#> button button--modifier="pf-m-plain" button--HasNoPadding=true button--attribute=(concat 'aria-labelledby="' label-group--id 'remove-label-two ' label-group--id 'label-two" aria-label="Remove" id="' label-group--id 'remove-label-two"')}}
                 <i class="fas fa-times" aria-hidden="true"></i>
               {{/button}}
-          {{/chip-actions}}
-          {{/chip}}
-        {{/chip-group-list-item}}
-        {{#> chip-group-list-item}}
-          {{#> chip}}
-            {{#> chip-content}}
-              {{#> chip-text chip-text--attribute=(concat 'id="' chip-group--id 'chip-three"')}}
-                Chip three
-              {{/chip-text}}
-            {{/chip-content}}
-            {{#> chip-actions}}
-              {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="' chip-group--id 'remove-chip-three ' chip-group--id 'chip-three" aria-label="Remove" id="' chip-group--id 'remove-chip-three"')}}
+          {{/label-actions}}
+          {{/label}}
+        {{/label-group-list-item}}
+        {{#> label-group-list-item}}
+          {{#> label label--IsOutlined=true}}
+            {{#> label-content}}
+              {{#> label-text label-text--attribute=(concat 'id="' label-group--id 'label-three"')}}
+                Label three
+              {{/label-text}}
+            {{/label-content}}
+            {{#> label-actions}}
+              {{#> button button--modifier="pf-m-plain" button--HasNoPadding=true button--attribute=(concat 'aria-labelledby="' label-group--id 'remove-label-three ' label-group--id 'label-three" aria-label="Remove" id="' label-group--id 'remove-label-three"')}}
                 <i class="fas fa-times" aria-hidden="true"></i>
               {{/button}}
-          {{/chip-actions}}
-          {{/chip}}
-        {{/chip-group-list-item}}
-      {{/chip-group-list}}
-    {{/chip-group-main}}
-  {{/chip-group}}
+          {{/label-actions}}
+          {{/label}}
+        {{/label-group-list-item}}
+      {{/label-group-list}}
+    {{/label-group-main}}
+  {{/label-group}}
 {{/toolbar-item}}
