--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -18,7 +18,7 @@
   --#{$form-control}--Width: 100%;
 
   // padding
-  --#{$form-control}--inset--base: var(--pf-t--global--spacer--md);
+  --#{$form-control}--inset--base: var(--pf-t--global--spacer--control--horizontal--default);
   --#{$form-control}--PaddingBlockStart: var(--pf-t--global--spacer--control--vertical--default);
   --#{$form-control}--PaddingBlockEnd: var(--pf-t--global--spacer--control--vertical--default);
   --#{$form-control}--PaddingInlineEnd: var(--#{$form-control}--inset--base);
@@ -60,42 +60,42 @@
   // success
   --#{$form-control}--m-success--after--BorderWidth: var(--pf-t--global--border--width--control--default);
   --#{$form-control}--m-success--after--BorderColor: var(--pf-t--global--border--color--status--success--default);
-  --#{$form-control}--m-success--PaddingInlineEnd: calc(var(--pf-t--global--spacer--xl) + var(--#{$form-control}--ColumnGap));
+  --#{$form-control}--m-success--PaddingInlineEnd: calc((var(--pf-t--global--spacer--control--horizontal--default) * 2) + var(--#{$form-control}--ColumnGap));
 
   // warning
   --#{$form-control}--m-warning--after--BorderWidth: var(--pf-t--global--border--width--control--default);
   --#{$form-control}--m-warning--after--BorderColor: var(--pf-t--global--border--color--status--warning--default);
-  --#{$form-control}--m-warning--PaddingInlineEnd: calc(var(--pf-t--global--spacer--xl) + var(--#{$form-control}--ColumnGap));
+  --#{$form-control}--m-warning--PaddingInlineEnd: calc((var(--pf-t--global--spacer--control--horizontal--default) * 2) + var(--#{$form-control}--ColumnGap));
 
   // error
   --#{$form-control}--m-error--after--BorderWidth: var(--pf-t--global--border--width--control--default);
   --#{$form-control}--m-error--after--BorderColor: var(--pf-t--global--border--color--status--danger--default);
-  --#{$form-control}--m-error--PaddingInlineEnd: calc(var(--pf-t--global--spacer--xl) + var(--#{$form-control}--ColumnGap));
+  --#{$form-control}--m-error--PaddingInlineEnd: calc((var(--pf-t--global--spacer--control--horizontal--default) * 2) + var(--#{$form-control}--ColumnGap));
   --#{$form-control}--m-error--icon--width: var(--#{$form-control}--FontSize);
 
   // custom icon
   --#{$form-control}--m-icon--PaddingInlineEnd: calc(var(--#{$form-control}--inset--base) + var(--#{$form-control}--m-icon--icon--width) + var(--#{$form-control}--m-icon--icon--spacer));
   --#{$form-control}--m-icon--icon--width: var(--#{$form-control}--FontSize);
-  --#{$form-control}--m-icon--icon--spacer: var(--pf-t--global--spacer--sm);
+  --#{$form-control}--m-icon--icon--spacer: var(--pf-t--global--spacer--control--horizontal--compact);
   --#{$form-control}--m-icon--icon--PaddingInlineEnd: calc(var(--#{$form-control}--inset--base) + var(--#{$form-control}--m-error--icon--width) + var(--#{$form-control}--m-icon--icon--spacer) + var(--#{$form-control}--m-icon--icon--width) + var(--#{$form-control}--m-icon--icon--spacer));
-  --#{$form-control}__select--PaddingInlineEnd: var(--pf-t--global--spacer--md);
-  --#{$form-control}__select--PaddingInlineStart: var(--pf-t--global--spacer--md);
+  --#{$form-control}__select--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--default);
+  --#{$form-control}__select--PaddingInlineStart: var(--pf-t--global--spacer--control--horizontal--default);
 
   // Select success
-  --#{$form-control}__select--m-success--m-status--PaddingInlineEnd: var(--pf-t--global--spacer--3xl);
+  --#{$form-control}__select--m-success--m-status--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--default) * 4);
 
   // Select warning
-  --#{$form-control}__select--m-warning--m-status--PaddingInlineEnd: var(--pf-t--global--spacer--3xl);
+  --#{$form-control}__select--m-warning--m-status--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--default) * 4);
 
   // Select invalid
-  --#{$form-control}__select--m-error--m-status--PaddingInlineEnd: var(--pf-t--global--spacer--3xl);
+  --#{$form-control}__select--m-error--m-status--PaddingInlineEnd: calc(var(--pf-t--global--spacer--control--horizontal--default) * 4);
 
   // Textarea
   --#{$form-control}--textarea--Width: var(--#{$form-control}--Width);
   --#{$form-control}--textarea--Height: auto;
 
   // Form control icon
-  --#{$form-control}__icon--PaddingBlockStart: var(--pf-t--global--spacer--sm);
+  --#{$form-control}__icon--PaddingBlockStart: var(--pf-t--global--spacer--control--vertical--default);
   --#{$form-control}__icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$form-control}__icon--m-status--Color: var(--pf-t--global--icon--color--regular);
   --#{$form-control}--m-success__icon--m-status--Color: var(--pf-t--global--icon--color--status--success--default);
@@ -103,12 +103,12 @@
   --#{$form-control}--m-error__icon--m-status--Color: var(--pf-t--global--icon--color--status--danger--default);
 
   // Form control utilities
-  --#{$form-control}__utilities--Gap: var(--pf-t--global--spacer--sm);
+  --#{$form-control}__utilities--Gap: var(--pf-t--global--spacer--control--vertical--default);
   --#{$form-control}__utilities--PaddingBlockStart: var(--#{$form-control}--inset--base);
   --#{$form-control}__utilities--PaddingInlineEnd: var(--#{$form-control}--inset--base);
 
   // Form control select toggle icon
-  --#{$form-control}__toggle-icon--PaddingBlockStart: var(--pf-t--global--spacer--sm);
+  --#{$form-control}__toggle-icon--PaddingBlockStart: var(--pf-t--global--spacer--control--vertical--default);
   --#{$form-control}__toggle-icon--PaddingInlineEnd: var(--#{$form-control}--inset--base);
   --#{$form-control}__toggle-icon--PaddingInlineStart: var(--#{$form-control}--inset--base);
   --#{$form-control}__toggle-icon--Color: var(--pf-t--global--icon--color--regular);
