chore(pf): @mcoker updates

--- a/src/patternfly/assets/fontawesome/_stacked.scss
+++ b/src/patternfly/assets/fontawesome/_stacked.scss
@@ -1,6 +1,7 @@
 // Stacked icons
 // -------------------------
 @use './variables.scss' as *;
+@use 'sass:math';
 
 .#{$fa-css-prefix}-stack {
   display: inline-block;
@@ -8,7 +9,7 @@
   line-height: 2em;
   position: relative;
   vertical-align: middle;
-  width: calc($fa-fw-width * 2);
+  width: math.div($fa-fw-width, 2);
 }
 
 .#{$fa-css-prefix}-stack-1x,
