--- a/src/patternfly/assets/fontawesome/_variables.scss
+++ b/src/patternfly/assets/fontawesome/_variables.scss
@@ -9,7 +9,7 @@ $fa-version:                  "5.6.3" !default;
 $fa-border-color:             #eee !default;
 $fa-inverse:                  #fff !default;
 $fa-li-width:                 2em !default;
-$fa-fw-width:                 div(20em, 16);
+$fa-fw-width:                 math.div(20em, 16);
 
 // Convenience function used to set content property
 @function fa-content($fa-var) {
