--- a/src/patternfly/base/_index.scss
+++ b/src/patternfly/base/_index.scss
@@ -7,4 +7,4 @@
 @forward './patternfly-fa-icons';
 @forward './patternfly-pf-icons';
 @forward './patternfly-svg-icons';
-@forward './tokens';
+@forward './patternfly-variables';
