--- a/src/patternfly/assets/fontawesome/_list.scss
+++ b/src/patternfly/assets/fontawesome/_list.scss
@@ -1,10 +1,11 @@
 // List icons
 // -------------------------
 @use './variables.scss' as *;
+@use 'sass:math';
 
 .#{$fa-css-prefix}-ul {
   list-style-type: none;
-  margin-left: div($fa-li-width * 5, 4);
+  margin-left: math.div($fa-li-width * 5, 4);
   padding-left: 0;
 
   > li { position: relative; }
